--- a/ShopMaiHien/appsettings.json
+++ b/ShopMaiHien/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ShopMaiHien-73CE2CB5-A85C-404E-9D2D-D16555F644AB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-A8I8Q05;Database=ShopMaiHien;User Id=sa;Password=123456;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
